# SEAF

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.codex/agents/: production-roadmap-slice.md
.github/workflows/: ci.yml  release-artifacts.yml
.seaf/loops/current/: contract.md  log.md  progress.md
crates/seaf-cli/: Cargo.toml  LICENSE
crates/seaf-cli/src/: doctor.rs  main.rs
crates/seaf-cli/tests/: cli.rs
crates/seaf-core/: Cargo.toml
crates/seaf-core/src/: canonical.rs  eval_config.rs  lib.rs  models.rs  templates.rs  validation.rs
crates/seaf-core/templates/: adaptive.yaml  generic-seaf.config.json  generic-seaf.policy.json  seaf.evals.yaml
crates/seaf-core/tests/: durable_schema_drift.rs  durable_wire_mapping.rs
crates/seaf-local-runtime/: Cargo.toml
crates/seaf-local-runtime/src/: lib.rs
crates/seaf-loop/: Cargo.toml
crates/seaf-loop/src/: approved_eval.rs  artifact_safety.rs  artifact_storage.rs  artifacts.rs  bench.rs  candidate_workspace.rs  context.rs  context_expansion.rs  development_evidence.rs  eval_engine.rs  eval_report.rs  evaluation_attempt.rs  evaluation_storage.rs  final_evaluation_authority.rs  immutable_artifact.rs  inspect.rs  lib.rs  migration.rs  model_runner.rs  operator_evidence.rs  patch.rs  policy.rs  policy_gate.rs  promotion.rs  provider_exchange.rs  recovery.rs  retention.rs  role_artifact.rs  role_response.rs  run_persistence.rs  runner.rs  secret_redaction.rs  state.rs  storage_authority.rs  testing_evidence.rs  workspace.rs
crates/seaf-loop/src/test_suites/: output_review_response_recovery.rs  provider_live_context.rs  provider_secret_recovery.rs  provider_step_runner.rs  spec_creation_revision_recovery.rs
crates/seaf-loop/tests/: bench.rs  candidate_workspace.rs  context_expansion.rs  eval_engine.rs  eval_report.rs  final_evaluation_authority.rs  patch.rs  policy_gate.rs  provider_candidate_boundary.rs  provider_exchange.rs  provider_isolation_boundary.rs  provider_live_context.rs  provider_staged_candidate_authority.rs  provider_step_runner.rs  retention.rs  role_response.rs  run_migration.rs  state.rs  testing_evidence.rs
crates/seaf-models/: Cargo.toml
crates/seaf-models/src/: fake.rs  lib.rs  ollama.rs  provider.rs
crates/seaf-models/tests/: ollama.rs
docs/: agent-loop.md  architecture.md  artifact-chain.md  development-roadmap.md  durable-artifact-migration.md  local-agent-loop.md  loop-evals.md  mvp-backlog.md  phase-2-local-agent-loop.md  preview-compatibility-handoff.md  production-readiness-roadmap.md  production-use-implementation-plan.md  release-artifacts.md  run-retention.md  supported-platforms.md  threat-model.md
docs/agent-configurations/: m2-07.md  m3-durable-artifacts.md
docs/local-models/: ollama-gemma4.md
docs/security/: forbidden-shortcuts.md  local-agent-boundaries.md
docs/superpowers/plans/: 2026-07-14-m2-07a-reviewer-recovery.md  2026-07-15-m2-07b-ollama-schema-grounding.md  2026-07-15-m2-07c-ollama-conditional-schema.md  2026-07-15-m2-07d-deterministic-review-fixture.md  2026-07-15-m2-07e-developer-diff-grounding.md
docs/superpowers/specs/: 2026-07-14-m2-07a-reviewer-recovery-design.md
examples/adaptive-notes/: invalid-adaptive.yaml  invalid-seaf.policy.json  release-capsule.json  seaf.evals.yaml  seaf.policy.json
examples/adaptive-notes/events/: note-created.json
examples/agent-bench-lite/: README.md
examples/agent-bench-lite/evals/: seaf.evals.yaml
examples/agent-bench-lite/expected/: cli-health.json  docs-only.json  eval-weakening-rejection.json  forbidden-ci-change-rejection.json  validation-test.json
examples/agent-bench-lite/repo-fixture/: README.md  cli.txt  docs.md  validation.txt
examples/agent-bench-lite/tickets/: cli-health.yaml  docs-only.yaml  eval-weakening-rejection.yaml  forbidden-ci-change-rejection.yaml  validation-test.yaml
examples/local-loop/: README.md  seaf.evals.yaml
examples/local-loop/project-configs/: invalid-absolute-policy-path.json  invalid-control-policy-path.json  invalid-empty-policy-path.json  invalid-newline-policy-path.json  invalid-nul-policy-path.json  invalid-parent-traversal-policy-path.json  invalid-unknown-field.json
examples/local-loop/runs/: valid-loop-run.json
examples/local-loop/tickets/: add-health-command.yaml  invalid-empty-ticket.yaml
fixtures/model-responses/: analyzer.invalid_status.json  analyzer.valid.json  development.invalid_markdown_only.txt  development.invalid_missing_patch.json  development.invalid_needs_context_missing_request.json  development.invalid_patch_outside_field.json  development.valid_needs_context.json  development.valid_patch.json  research.invalid_missing_status.json  research.valid.json  research.valid_needs_context.json  review.invalid_missing_non_blocking.json  review.rejects.json  spec_reviewer.invalid_missing_issue_arrays.json  spec_reviewer.valid.json  spec_writer.invalid_unknown_field.json  spec_writer.valid.json
fixtures/packaged-external-golden-path/: golden-path-check.sh  project.txt  seaf.evals.yaml.in  seaf.ticket.yaml
fixtures/patches/: allowed-doc.diff  binary.diff  forbidden-secret.diff  path-traversal.diff
scripts/: assemble-release-assets.sh  build-release-artifact.sh  test-milestone-one-acceptance.sh  test-package-readiness.sh  test-packaged-external-golden-path.sh  test-packaged-ollama-fixture-preflight.cjs  test-packaged-ollama-fixture-trust-boundary.cjs  test-release-artifacts.sh  validate-packaged-ollama-fixture.cjs
specs/: agent-capability.schema.json  agent-task.schema.json  eval-report.schema.json  event.schema.json  goal.schema.json  loop-run.schema.json  policy-decision.schema.json  policy.schema.json  project-config.schema.json  release-capsule.schema.json  signal.schema.json  ticket.schema.json
(+3 files in other folders)
