[workspace]
members = [
  "crates/seaf-core",
  "crates/seaf-cli",
  "crates/seaf-local-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Curiosity-Ai-BV/SEAF"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
