[workspace]
members = [
  "crates/seaf-core",
  "crates/seaf-cli",
  "crates/seaf-local-runtime",
  "crates/seaf-models",
  "crates/seaf-loop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Curiosity-Ai-BV/SEAF"
publish = false

[workspace.dependencies]
aho-corasick = "1.1.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
libc = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
seaf-core = { version = "=0.1.0", path = "crates/seaf-core" }
seaf-loop = { version = "=0.1.0", path = "crates/seaf-loop" }
seaf-models = { version = "=0.1.0", path = "crates/seaf-models" }
