[package]
name = "seaf-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "seaf"
path = "src/main.rs"

[dependencies]
clap.workspace = true
seaf-core = { path = "../seaf-core" }
seaf-loop = { path = "../seaf-loop" }
seaf-models = { path = "../seaf-models" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
