[package]
name = "seaf-cli"
version.workspace = true
edition.workspace = true
description = "Developer CLI for the Self-Evolving Application Framework"
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "seaf"
path = "src/main.rs"

[dependencies]
clap.workspace = true
seaf-core.workspace = true
seaf-loop.workspace = true
seaf-models.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
libc.workspace = true
sha2.workspace = true
tempfile.workspace = true
