[package]
name = "seaf-core"
version.workspace = true
edition.workspace = true
description = "Shared data contracts, validation, and canonicalization for SEAF"
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
