[package]
name = "seaf-local-runtime"
version.workspace = true
edition.workspace = true
description = "Private local runtime primitives and SQLite signal storage for SEAF"
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rusqlite.workspace = true
seaf-core.workspace = true
serde_json.workspace = true
