[package]
name = "seaf-loop"
version.workspace = true
edition.workspace = true
description = "Supervised local coding-loop orchestration and policy gates for SEAF"
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
aho-corasick.workspace = true
hex.workspace = true
libc.workspace = true
seaf-core.workspace = true
seaf-models.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
