[package]
name = "seaf-models"
version.workspace = true
edition.workspace = true
description = "Model provider interfaces and local provider implementations for SEAF"
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
